HW 15 problem tags

--- a/web/index.html
+++ b/web/index.html
@@ -7,5 +7,22 @@
 <body>
 <h2>Приложение вебинара java <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
     приложения."</a></h2>
+<table border="1">
+    <tr>
+        <td>строка1 ячейка1</td>
+        <td>строка1 ячейка2</td>
+        <td>строка1 ячейка3</td>
+    </tr>
+    <tr>
+        <td>строка2 ячейка1</td>
+        <td>строка2 ячейка2</td>
+        <td>строка2 ячейка3</td>
+    </tr>
+    <tr>
+        <td>строка3 ячейка1</td>
+        <td>строка3 ячейка2</td>
+        <td>строка3 ячейка3</td>
+    </tr>
+</table>
 </body>
 </html>
