Lesson 16 ready application (new - work so so)

--- a/web/index.html
+++ b/web/index.html
@@ -1,28 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Практика Java. Разработка Web приложения.</title>
+  <meta charset="utf-8">
+  <title>resume</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-<h2>Приложение вебинара java <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
-    приложения."</a></h2>
-<table border="1">
-    <tr>
-        <td>строка1 ячейка1</td>
-        <td>строка1 ячейка2</td>
-        <td>строка1 ячейка3</td>
-    </tr>
-    <tr>
-        <td>строка2 ячейка1</td>
-        <td>строка2 ячейка2</td>
-        <td>строка2 ячейка3</td>
-    </tr>
-    <tr>
-        <td>строка3 ячейка1</td>
-        <td>строка3 ячейка2</td>
-        <td>строка3 ячейка3</td>
-    </tr>
-</table>
+
+  <header class="header">
+    <div class="container">
+      <a href="/">Управление резюме</a>
+    </div>
+  </header>
+  <main class="content-wrapper">
+    <section class="resume-content">
+      <div class="container">
+        <div class="top-line">
+          <h2>Список резюме</h2>
+          <!-- href = resume?action=add -->
+          <a href="/edit.html" class="btn btn-add">
+            <i class="fa fa-plus"></i>
+            Добавить</a>
+        </div>
+        <div class="resume-list">
+          <!-- условие если записей еще нет  -->
+          <!-- <p>Ни одного резюме еще не добавленно.</p> -->
+          <table class="table">
+            <thead class="t-head">
+              <tr>
+                <th>Имя</th>
+                <th>Email</th>
+                <th>Изменить</th>
+                <th>Удалить</th>
+              </tr>
+            </thead>
+            <tbody class="t-body">
+              <tr>
+                <th><a href="/resume.html">Дональд Трамп</a></th>
+                <th><a href="mailto:"> GoldenBoy@gmail.com</a></th>
+                <th>
+                  <a href="/">
+                    <i class="fa fa-pencil"></i>
+                  </a>
+                </th>
+                <th>
+                  <a href="/">
+                    <i class="fa fa-close"></i>
+                  </a>
+                </th>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <p>Web-приложение "База данных резюме" курса <a href="http://javaops.ru/reg/basejava">BaseJava</a></p>
+  </footer>
+  <script src="js/scripts.min.js"></script>
 </body>
+
 </html>
