Lesson 16 Grigoriy No delete

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0; url=resume"/>
   <title>resume</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -11,10 +12,9 @@
 </head>
 
 <body>
-
   <header class="header">
     <div class="container">
-      <a href="/">Управление резюме</a>
+      <a href="resume">Управление резюме</a>
     </div>
   </header>
   <main class="content-wrapper">
@@ -28,8 +28,7 @@
             Добавить</a>
         </div>
         <div class="resume-list">
-          <!-- условие если записей еще нет  -->
-          <!-- <p>Ни одного резюме еще не добавленно.</p> -->
+
           <table class="table">
             <thead class="t-head">
               <tr>
@@ -41,8 +40,8 @@
             </thead>
             <tbody class="t-body">
               <tr>
-                <th><a href="/resume.html">Дональд Трамп</a></th>
-                <th><a href="mailto:"> GoldenBoy@gmail.com</a></th>
+                <th><a href="/resume.html">Ирина Грицюк</a></th>
+                <th><a href="mailto:"> gagarina6794@gmail.com</a></th>
                 <th>
                   <a href="/">
                     <i class="fa fa-pencil"></i>
