Lesson 17 READY RESUME ON HEROKU

--- a/web/index.html
+++ b/web/index.html
@@ -2,67 +2,16 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=resume"/>
-  <title>resume</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/styles.css">
+  <div class="header-cyan">
+    <a href="http://javaops.ru/reg/basejava" class="logo">Web-приложение "База данных резюме" курса BaseJava</a>
+    <div class="header-cyan-right">
+      <a class="active" href="resume">Управление резюме</a>
+    </div>
+  </div>
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <a href="resume">Управление резюме</a>
-    </div>
-  </header>
-  <main class="content-wrapper">
-    <section class="resume-content">
-      <div class="container">
-        <div class="top-line">
-          <h2>Список резюме</h2>
-          <!-- href = resume?action=add -->
-          <a href="/edit.html" class="btn btn-add">
-            <i class="fa fa-plus"></i>
-            Добавить</a>
-        </div>
-        <div class="resume-list">
 
-          <table class="table">
-            <thead class="t-head">
-              <tr>
-                <th>Имя</th>
-                <th>Email</th>
-                <th>Изменить</th>
-                <th>Удалить</th>
-              </tr>
-            </thead>
-            <tbody class="t-body">
-              <tr>
-                <th><a href="/resume.html">Ирина Грицюк</a></th>
-                <th><a href="mailto:"> gagarina6794@gmail.com</a></th>
-                <th>
-                  <a href="/">
-                    <i class="fa fa-pencil"></i>
-                  </a>
-                </th>
-                <th>
-                  <a href="/">
-                    <i class="fa fa-close"></i>
-                  </a>
-                </th>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <p>Web-приложение "База данных резюме" курса <a href="http://javaops.ru/reg/basejava">BaseJava</a></p>
-  </footer>
-  <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
