Lesson 17 READY RESUME with normal css

--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
 
 <head>
-  <div class="header-cyan">
-    <a href="http://javaops.ru/reg/basejava" class="logo">Web-приложение "База данных резюме" курса BaseJava</a>
-    <div class="header-cyan-right">
-      <a class="active" href="resume">Управление резюме</a>
-    </div>
-  </div>
+<meta charset="utf-8">
+  <meta http-equiv="refresh" content="0; url=resume"/>
+
 </head>
 
-<body>
+<body style="background: whitesmoke">
 
 </body>
-
 </html>
